Add instructions on running tests to the README